html/css/less/addressings.less
.mod-pedal-settings {

  .mod-address.addressed, .preset-btn-assign-all.addressed {
    background-color: lighten(@brand-primary, 7.5%);
  }
}

.mod-pedal-settings-address {

  .mod-box {

    .form-container {
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;

      .btn.js-type, .btn.advanced-toggle {
        border: solid @gray-dark 1px;
      }

      .main-form-container {
        width: 438px;
        padding-right: 3px;

        label {
          text-align: center;
        }

        .btn.js-type {

          &.selected {
            background-color: @gray-dark;
            color: white;
          }
        }

        .group-strike {
          display: flex;
          flex-basis: 100%;
          align-items: center;
          color: black;
          margin: 6px 0px;

          &:before, &:after {
            content: "";
            flex-grow: 1;
            background: black;
            height: 3px;
            font-size: 0;
            line-height: 0;
          }
          &:before {
            margin-right: 8px;
          }
          &:after {
            margin-left: 8px;
          }
        }

        .hmi-table {
          width: 100%;

          th:first-child {
            background-color: @red;
          }

          th:nth-child(2) {
            background-color: @yellow;
          }

          th:nth-child(3) {
            background-color: @cyan;
          }

          th, td {
            border: solid @gray-dark 1px;
            text-align: center;
          }

          td {
            padding: 5px;
            cursor: pointer;

            &.selected {
              background-color: @brand-primary;
              color: white;
              box-shadow: 3px 3px 3px @gray-light;
            }

            &.disabled {
              cursor: auto;
              color: @gray-light;
              background-color: @gray-mid-light;
              box-shadow: inset 0 0 3px @gray;
            }
          }
        }

        .midi-custom-uri {
          color: @brand-primary;
        }
      }

      .buttons-container {
        padding-right: 3px;
        padding-bottom: 18px;
      }

      .advanced-container {
        border-left: 1px solid @gray-lighter;
        padding-left: 12px;
        margin-left: 12px;
      }
    }
  }
}

.mod-cv-output {

  .output-cv-checkbox {
    display: flex;
    position: absolute;
    top: 45px;
    left: 15px;

    input[type=checkbox] {
      margin: 5px;
    }

    input[type=text] {
      font-size: 20px;
    }

    ::selection {
      background: @brand-primary !important;
      color: white !important;
    }
  }
}

